src/test/deca/context/invalid/classes/extends_void.deca
// Description :
//    extends avec nom de classe interdit
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : La super-classe void n'est pas une classe

class A extends void {
}
